--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@ body {
   border-radius: 8px;
   padding: 14px;
   width: 100%;
-  max-width: 760px;
+  max-width: 700px;
 
   background-image: var(--radial-gradient);
 }
